--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
     </div>
     <script>
-        var map;
+        var map, marker;
         var input_id= ['lat','lng','zoom'];
         input_checker = function(arr){
             var result = [];
@@ -82,13 +82,14 @@
             });
             if(result.indexOf(false) >= 0){return false;}else{return true;}
         }
-        initMap = function(){
+        initMap = function(coordinates){
             var lat_num = -34.397, lan_num = 150.644, zoom_num= 10;
-            var coordinates = [-34.397,150.644,10];
+            coordinates = [-34.397,150.644,10];
             map = new google.maps.Map(document.getElementById('map'),{
                 center: {lat: coordinates[0], lng: coordinates[1]},
                 zoom: coordinates[2]
             });
+            marker = new google.maps.Marker({position: {lat: coordinates[0],lng: coordinates[1]}, map: map});
             if(!input_checker(input_id)){
                 input_id.forEach((e) => {
                     var i = input_id.indexOf(e);
