--- a/Autocomplete.html
+++ b/Autocomplete.html
@@ -70,9 +70,9 @@
     <table id="address">
       <tr>
         <td class="label">Street address</td>
-        <td class="slimField"><input class="field" id="street_number"
+        <td class="slimField"><input class="field street_number" id="street_number"
               disabled="false"></input></td>
-        <td class="wideField" colspan="2"><input class="field" id="route" ></input></td>
+        <td class="wideField" colspan="2"><input class="field route premise" id="route" ></input></td>
       </tr>
       <tr>
         <td class="label">City</td>
@@ -80,20 +80,20 @@
              You may need to adjust it for the locations relevant to your app. See
              https://developers.google.com/maps/documentation/javascript/examples/places-autocomplete-addressform
         -->
-        <td class="wideField" colspan="3"><input class="field" id="locality"
+        <td class="wideField" colspan="3"><input class="field locality postal_town" id="locality"
               disabled="true"></input></td>
       </tr>
       <tr>
         <td class="label">State</td>
-        <td class="slimField"><input class="field"
+        <td class="slimField"><input class="field administrative_area_level_1"
               id="administrative_area_level_1" disabled="true"></input></td>
         <td class="label">Zip code</td>
-        <td class="wideField"><input class="field" id="postal_code"
+        <td class="wideField"><input class="field postal_code" id="postal_code"
               disabled="true"></input></td>
       </tr>
       <tr>
         <td class="label">Country</td>
-        <td class="wideField" colspan="3"><input class="field"
+        <td class="wideField" colspan="3"><input class="field country"
               id="country" disabled="true"></input></td>
       </tr>
     </table>
@@ -103,6 +103,8 @@
       var componentForm = {
         street_number: 'short_name',
         route: 'long_name',
+        premise: 'long_name',
+        postal_town: 'long_name',
         locality: 'long_name',
         administrative_area_level_1: 'short_name',
         country: 'long_name',
@@ -124,24 +126,22 @@
       function fillInAddress() {
         // Get the place details from the autocomplete object.
         var place = autocomplete.getPlace();
-        console.log(place);
 
         for (var component in componentForm) {
-          document.getElementById(component).value = '';
-          document.getElementById(component).disabled = false;
+          document.querySelector('.'+component).value = '';
+          document.querySelector('.'+component).disabled = false;
         }
 
         // Get each component of the address from the place details
         // and fill the corresponding field on the form.
         for (var i = 0; i < place.address_components.length; i++) {
           var addressType = place.address_components[i].types[0];
-          console.log(addressType);
           if (componentForm[addressType]) {
             var val = place.address_components[i][componentForm[addressType]];
             if(addressType === "country"){
-                console.log(val);
+                console.log(val); // here must write code for choosing the right option in selectbox
             }
-            document.getElementById(addressType).value = val;
+            document.querySelector('.'+addressType).value = val;
           }
         }
       }
