--- a/Autocomplete.html
+++ b/Autocomplete.html
@@ -64,15 +64,15 @@
   <body>
     <div id="locationField">
       <!-- <input id="autocomplete" placeholder="Enter your address"
-             onFocus="geolocate()" type="text"></input> -->
+             onFocus="geolocate()" type="text"> -->
     </div>
 
     <table id="address">
       <tr>
         <td class="label">Street address</td>
         <td class="slimField"><input class="field street_number" id="street_number"
-              disabled="false"></input></td>
-        <td class="wideField" colspan="2"><input class="field route premise" id="route" ></input></td>
+              disabled="false"></td>
+        <td class="wideField" colspan="2"><input class="field route premise" id="main_filed" ></td>
       </tr>
       <tr>
         <td class="label">City</td>
@@ -80,90 +80,27 @@
              You may need to adjust it for the locations relevant to your app. See
              https://developers.google.com/maps/documentation/javascript/examples/places-autocomplete-addressform
         -->
-        <td class="wideField" colspan="3"><input class="field locality postal_town" id="locality"
-              disabled="true"></input></td>
+        <td class="wideField" colspan="3"><input class="field locality postal_town administrative_area_level_2" id="locality"
+              disabled="true"></td>
       </tr>
       <tr>
         <td class="label">State</td>
         <td class="slimField"><input class="field administrative_area_level_1"
-              id="administrative_area_level_1" disabled="true"></input></td>
+              id="administrative_area_level_1" disabled="true"></td>
         <td class="label">Zip code</td>
         <td class="wideField"><input class="field postal_code" id="postal_code"
-              disabled="true"></input></td>
+              disabled="true"></td>
       </tr>
       <tr>
         <td class="label">Country</td>
         <td class="wideField" colspan="3"><input class="field country"
-              id="country" disabled="true"></input></td>
+              id="country" disabled="true"></td>
       </tr>
     </table>
 
     <script>
-      var placeSearch, autocomplete;
-      var componentForm = {
-        street_number: 'short_name',
-        route: 'long_name',
-        premise: 'long_name',
-        postal_town: 'long_name',
-        locality: 'long_name',
-        administrative_area_level_1: 'short_name',
-        country: 'long_name',
-        postal_code: 'short_name'
-      };
-
-      function initAutocomplete() {
-        // Create the autocomplete object, restricting the search to geographical
-        // location types.
-        autocomplete = new google.maps.places.Autocomplete(
-            /** @type {!HTMLInputElement} */(document.getElementById('route')),
-            {types: ['geocode']});
-
-        // When the user selects an address from the dropdown, populate the address
-        // fields in the form.
-        autocomplete.addListener('place_changed', fillInAddress);
-      }
-
-      function fillInAddress() {
-        // Get the place details from the autocomplete object.
-        var place = autocomplete.getPlace();
-
-        for (var component in componentForm) {
-          document.querySelector('.'+component).value = '';
-          document.querySelector('.'+component).disabled = false;
-        }
-
-        // Get each component of the address from the place details
-        // and fill the corresponding field on the form.
-        for (var i = 0; i < place.address_components.length; i++) {
-          var addressType = place.address_components[i].types[0];
-          if (componentForm[addressType]) {
-            var val = place.address_components[i][componentForm[addressType]];
-            if(addressType === "country"){
-                console.log(val); // here must write code for choosing the right option in selectbox
-            }
-            document.querySelector('.'+addressType).value = val;
-          }
-        }
-      }
-
-      // Bias the autocomplete object to the user's geographical location,
-      // as supplied by the browser's 'navigator.geolocation' object.
-      function geolocate() {
-        if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(function(position) {
-            var geolocation = {
-              lat: position.coords.latitude,
-              lng: position.coords.longitude
-            };
-            var circle = new google.maps.Circle({
-              center: geolocation,
-              radius: position.coords.accuracy
-            });
-            autocomplete.setBounds(circle.getBounds());
-          });
-        }
-      }
+      var apiKey= "AIzaSyDCrwVnQQRU3KAbvkSAFzSRLxpymNFBpiA";
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCrwVnQQRU3KAbvkSAFzSRLxpymNFBpiA&libraries=places&callback=initAutocomplete" async defer></script>
+    <script src="js/ws-google-place-api_1.0.0.js"></script>
   </body>
 </html>
