--- a/bootstrap-autocomplete.html
+++ b/bootstrap-autocomplete.html
@@ -40,7 +40,7 @@
                     <span>Stadt/PLZ </span>
             </div>
             <div class="col-xs-9 col-sm-7 col-md-7 col-lg-7">
-                <input type="text" class="form-control locality postal_town administrative_area_level_2">
+                <input type="text" class="form-control locality postal_town">
             </div>
             <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
                     <input type="text" class="form-control postal_code">
@@ -360,6 +360,6 @@
             });
         });
     </script>
-    <script src="js/ws-google-place-api_1.0.0.js"></script>
+    <script src="js/ws-google-place-api_1.0.0.min.js"></script>
 </body>
 </html>
